--- a/index.html
+++ b/index.html
@@ -67,12 +67,35 @@
         </section>
         
         <!--What We Do-->
-        <section>
+        <section id="what-we-do">
             <h2>What We Do</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, dolor, repudiandae eaque doloribus debitis quae distinctio inventore at accusamus minima architecto itaque fugit laudantium perferendis a adipisci ducimus omnis necessitatibus!
+            </p>
         </section>
         <!--What You Do-->
-        <section>
+        <section id="what-you-do">
             <h2>What You Do</h2>
+            <div>
+                <img src="./assets/images/step-1.svg" alt="" />
+                <h3>Step 1: Fill Out the Form Above</h3>
+                <p>You're already here, so why not?</p>
+            </div>
+
+            <div>
+                <h3>Step 2: Consult with One of Our Trainers</h3>
+                <p>What are your fitness goals?</p>
+            </div>
+
+            <div>
+                <h3>Step 3: Get Running</h3>
+                <p>Hit the ground running once your trainer lays out your plan</p>
+            </div>
+
+            <div>
+                <h3>Step 4: See Results</h3>
+                <p>Bi-Weekly Check-ins with your Trainer will Help you Keep Focused</p>
+            </div>
         </section>
 
         <!--Meet the Trainers-->
