--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </section>
         
         <!--What We Do-->
-        <section id="what-we-do">
+        <section id="what-we-do" class="intro">
             <h2>What We Do</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, dolor, repudiandae eaque doloribus debitis quae distinctio inventore at accusamus minima architecto itaque fugit laudantium perferendis a adipisci ducimus omnis necessitatibus!
@@ -83,16 +83,19 @@
             </div>
 
             <div>
+                <img src="./assets/images/step-2.svg" alt="" />
                 <h3>Step 2: Consult with One of Our Trainers</h3>
                 <p>What are your fitness goals?</p>
             </div>
 
             <div>
+                <img src="./assets/images/step-3.svg" alt="" />
                 <h3>Step 3: Get Running</h3>
                 <p>Hit the ground running once your trainer lays out your plan</p>
             </div>
 
             <div>
+                <img src="./assets/images/step-4.svg" alt ="" />
                 <h3>Step 4: See Results</h3>
                 <p>Bi-Weekly Check-ins with your Trainer will Help you Keep Focused</p>
             </div>
