--- a/index.html
+++ b/index.html
@@ -68,35 +68,35 @@
         
         <!--What We Do-->
         <section id="what-we-do" class="intro">
-            <h2>What We Do</h2>
+            <h2 class="section-title primary-border">What We Do</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, dolor, repudiandae eaque doloribus debitis quae distinctio inventore at accusamus minima architecto itaque fugit laudantium perferendis a adipisci ducimus omnis necessitatibus!
             </p>
         </section>
         <!--What You Do-->
-        <section id="what-you-do">
-            <h2>What You Do</h2>
+        <section id="what-you-do" class="steps">
+            <h2 class="section-title secondary-border">What You Do</h2>
             <div>
                 <img src="./assets/images/step-1.svg" alt="" />
-                <h3>Step 1: Fill Out the Form Above</h3>
+                <h3>Step 1: <span>Fill Out the Form Above</span></h3>
                 <p>You're already here, so why not?</p>
             </div>
 
             <div>
                 <img src="./assets/images/step-2.svg" alt="" />
-                <h3>Step 2: Consult with One of Our Trainers</h3>
+                <h3>Step 2: <span>Consult with One of Our Trainers</span></h3>
                 <p>What are your fitness goals?</p>
             </div>
 
             <div>
                 <img src="./assets/images/step-3.svg" alt="" />
-                <h3>Step 3: Get Running</h3>
+                <h3>Step 3: <span>Get Running</span></h3>
                 <p>Hit the ground running once your trainer lays out your plan</p>
             </div>
 
             <div>
                 <img src="./assets/images/step-4.svg" alt ="" />
-                <h3>Step 4: See Results</h3>
+                <h3>Step 4: <span>See Results</span></h3>
                 <p>Bi-Weekly Check-ins with your Trainer will Help you Keep Focused</p>
             </div>
         </section>
