--- a/index.html
+++ b/index.html
@@ -102,8 +102,43 @@
         </section>
 
         <!--Meet the Trainers-->
-        <section>
-            <h2>Meet the Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">
+                Meet the Trainers
+            </h2>
+            <!--First Trainer-->
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <P>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque sunt at incidunt eligendi maiores vitae blanditiis voluptatem odit accusantium nobis assumenda eveniet soluta, doloremque commodi, sapiente dolore libero pariatur minima?
+                    </P>
+                </div>
+            </article>
+            <!--Second Trainer-->
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, magni? Impedit velit tenetur vero, labore aspernatur autem nemo suscipit dolorem laboriosam cumque sunt facilis nam, sed quaerat voluptatem ipsam officiis?
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+            </article>
+            <!--Third Trainer-->
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint similique eos, odit hic quis dolorum deleniti, maiores tempora id obcaecati cupiditate repudiandae dolor vel nobis rerum accusamus. Nobis, esse illo.
+                    </p>
+                </div>
+            </article>
         </section>
 
         <!--Reach Out-->
