--- a/index.html
+++ b/index.html
@@ -142,13 +142,12 @@
         </section>
 
         <!--Reach Out-->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12879.230497301587!2d-86.73318545970854!3d36.195560182796086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8864686b1f94c43b%3A0xccc7f3c632ee2584!2s1614%20Porter%20Rd%2C%20Nashville%2C%20TN%2037206!5e0!3m2!1sen!2sus!4v1639588652568!5m2!1sen!2sus" 
-                width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
+                style="border:0;" allowfullscreen="" loading="lazy">
                 </iframe>              
-            </div>
             <div>
                 <h3>Run Buddy</h3>
                 <p>
@@ -163,6 +162,7 @@
                     P: 555.RUN.BUDZ (555.786.2839)<br />
                     E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
                 </address>
+            </div>
             </div>
         </section>
 
