--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
         
         <!--Hero-->
         <section class="hero">
-           <div class="hero-form">
+            <div class="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam reprehenderit cumque explicabo esse aliquam eligendi eos, eaque suscipit quia quam. Amet sit ipsa laborum debitis mollitia vero minus facere dicta!
+                </p>
+            </div>
+            <div class="hero-form">
                <h3>Get Started Today</h3>
                <p>Fill out this form and one of our trainers will schedule a consult!</p>
                <form>
