add flexbox to sections

--- a/index.html
+++ b/index.html
@@ -74,44 +74,52 @@
         
         <!--What We Do-->
         <section id="what-we-do" class="intro">
-            <h2 class="section-title primary-border">What We Do</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, dolor, repudiandae eaque doloribus debitis quae distinctio inventore at accusamus minima architecto itaque fugit laudantium perferendis a adipisci ducimus omnis necessitatibus!
-            </p>
+            <div class="flex-row">    
+                <h2 class="section-title primary-border">What We Do</h2>
+                    <div class="flex-row">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, dolor, repudiandae eaque doloribus debitis quae distinctio inventore at accusamus minima architecto itaque fugit laudantium perferendis a adipisci ducimus omnis necessitatibus!
+                        </p>
+                    </div>
+            </div>
         </section>
         <!--What You Do-->
         <section id="what-you-do" class="steps">
-            <h2 class="section-title secondary-border">What You Do</h2>
-            <div>
-                <img src="./assets/images/step-1.svg" alt="" />
-                <h3>Step 1: <span>Fill Out the Form Above</span></h3>
-                <p>You're already here, so why not?</p>
-            </div>
+            <div class="flex-row">    
+                <h2 class="section-title secondary-border">What You Do</h2>
+                    <div>
+                        <img src="./assets/images/step-1.svg" alt="" />
+                        <h3>Step 1: <span>Fill Out the Form Above</span></h3>
+                        <p>You're already here, so why not?</p>
+                    </div>
 
-            <div>
-                <img src="./assets/images/step-2.svg" alt="" />
-                <h3>Step 2: <span>Consult with One of Our Trainers</span></h3>
-                <p>What are your fitness goals?</p>
-            </div>
+                    <div>
+                        <img src="./assets/images/step-2.svg" alt="" />
+                        <h3>Step 2: <span>Consult with One of Our Trainers</span></h3>
+                        <p>What are your fitness goals?</p>
+                    </div>
 
-            <div>
-                <img src="./assets/images/step-3.svg" alt="" />
-                <h3>Step 3: <span>Get Running</span></h3>
-                <p>Hit the ground running once your trainer lays out your plan</p>
-            </div>
+                    <div>
+                        <img src="./assets/images/step-3.svg" alt="" />
+                        <h3>Step 3: <span>Get Running</span></h3>
+                        <p>Hit the ground running once your trainer lays out your plan</p>
+                    </div>
 
-            <div>
-                <img src="./assets/images/step-4.svg" alt ="" />
-                <h3>Step 4: <span>See Results</span></h3>
-                <p>Bi-Weekly Check-ins with your Trainer will Help you Keep Focused</p>
+                    <div>
+                        <img src="./assets/images/step-4.svg" alt ="" />
+                        <h3>Step 4: <span>See Results</span></h3>
+                        <p>Bi-Weekly Check-ins with your Trainer will Help you Keep Focused</p>
+                    </div>
             </div>
         </section>
 
         <!--Meet the Trainers-->
         <section id="your-trainers" class="trainers">
-            <h2 class="section-title primary-border">
-                Meet the Trainers
-            </h2>
+            <div class="flex-row">  
+                <h2 class="section-title primary-border">
+                    Meet the Trainers
+                </h2>
+            </div>
             <!--First Trainer-->
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
@@ -149,38 +157,40 @@
 
         <!--Reach Out-->
         <section id="reach-out" class="contact">
-            <h2 class="section-title secondary-border">Reach Out</h2>
-            <div class="contact-info">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12879.230497301587!2d-86.73318545970854!3d36.195560182796086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8864686b1f94c43b%3A0xccc7f3c632ee2584!2s1614%20Porter%20Rd%2C%20Nashville%2C%20TN%2037206!5e0!3m2!1sen!2sus!4v1639588652568!5m2!1sen!2sus" 
-                style="border:0;" allowfullscreen="" loading="lazy">
-                </iframe>              
-                <div class="contact-form">
-                    <h3>Contact Us</h3>
-                    <form>
-                        <label for="contact-name">Your Name</label>
-                        <input type="text" id="contact-name" placeholder="Your Name"/>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">Reach Out</h2>
+                    <div class="contact-info">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12879.230497301587!2d-86.73318545970854!3d36.195560182796086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8864686b1f94c43b%3A0xccc7f3c632ee2584!2s1614%20Porter%20Rd%2C%20Nashville%2C%20TN%2037206!5e0!3m2!1sen!2sus!4v1639588652568!5m2!1sen!2sus" 
+                        style="border:0;" allowfullscreen="" loading="lazy">
+                        </iframe>              
+                        <div class="contact-form">
+                            <h3>Contact Us</h3>
+                            <form>
+                                <label for="contact-name">Your Name</label>
+                                <input type="text" id="contact-name" placeholder="Your Name"/>
 
-                        <label for="contact-message">Message</label>
-                        <textarea id="contact-message" placeholder="Message"></textarea>
+                                <label for="contact-message">Message</label>
+                                <textarea id="contact-message" placeholder="Message"></textarea>
 
-                        <button type="submit">Submit</button>
-                    </form>
-                </div>
-                <div>
-                    <h3>Run Buddy</h3>
-                    <p>
-                        Any quesions or concerns before signing up?
-                        <br />
-                        Let us know and we'll be happy to talk to you!
-                    </p>
-                    <address>
-                        55 Main Street <br />
-                        Some Town, Ca <br />
-                        12345 <br />
-                        P: 555.RUN.BUDZ (555.786.2839)<br />
-                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-                    </address>
-            </div>
+                                <button type="submit">Submit</button>
+                            </form>
+                        </div>
+                        <div>
+                            <h3>Run Buddy</h3>
+                            <p>
+                                Any quesions or concerns before signing up?
+                                <br />
+                                Let us know and we'll be happy to talk to you!
+                            </p>
+                            <address>
+                                55 Main Street <br />
+                                Some Town, Ca <br />
+                                12345 <br />
+                                P: 555.RUN.BUDZ (555.786.2839)<br />
+                                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                            </address>
+                        </div>
+                    </div>
             </div>
         </section>
 
